<resources>
    <string name="app_name">Entrevoisins</string>
    <string name="tab_neighbour_title">My neighbours</string>
    <string name="tab_favorites_title">Favorites</string>
    <string name="activity_new_neighbour">New neighbour</string>
    <!-- Ajouté par JDR-->
    <string name="first_name">first_name</string>
    <string name="long_latin">long_latin</string>
    <string name="phone_number">phone_number</string>
    <string name="address">address</string>
    <string name="localisation">localisation</string>
    <string name="details_profil">details_profil</string>
    <string name="about_me">about_me</string>
</resources>
